переделана загрузка детального описания
теперь последовательно скачиваются список викисов и потом сразу
детальное описание для парсинга урлов картинок